@@ -1,5 +1,6 @@
 Version history: 0.80
  * Fixed an output quibble discovered by Michal Rokos
+ * Added set-env config option.
 
 Version history: 0.77
  * Added inst-apps config option.
